force-app/main/default/objects/AI_Integration_Log__c/AI_Integration_Log__c.object-meta.xml
<CustomObject>
    <description>Log of Claude API integration calls for the Lead summary pipeline. Written by Make on error branch.</description>
    <label>AI Integration Log</label>
    <nameField>
        <displayFormat>ILOG-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>