force-app/main/default/objects/AI_Integration_Log__c/fields/Error_Body__c.field-meta.xml
<CustomField>
    <fullName>Error_Body__c</fullName>
    <description>Raw error body from the Claude API or the Make guard module.</description>
    <label>Error Body</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>