force-app/main/default/objects/AI_Integration_Log__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <description>HTTP status or internal error code, e.g., 429, 401, GUARD_LENGTH, GUARD_EMPTY.</description>
    <label>Error Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>