force-app/main/default/objects/AI_Integration_Log__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead that triggered this integration run.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>AI Integration Logs</relationshipLabel>
    <relationshipName>AI_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>