force-app/main/default/objects/AI_Integration_Log__c/fields/Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Request_ID__c</fullName>
    <description>Anthropic request-id header, used as idempotency key for retries.</description>
    <externalId>true</externalId>
    <label>Request ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>