force-app/main/default/objects/AI_Integration_Log__c/fields/Scenario_Run_ID__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Run_ID__c</fullName>
    <description>Make scenario execution ID, for tracing back to Make run history.</description>
    <label>Scenario Run ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>